fixed some bits and pieces

--- a/assets/css/admin_lte/AdminLTE.less
+++ b/assets/css/admin_lte/AdminLTE.less
@@ -54,7 +54,7 @@
 
 //Skins
 //-------
-@import "skins/skin-orange.less";
+@import "skins/skin-blue.less";
 //@import "skins/skin-blue.less";
 //@import "skins/skin-black.less";
 //@import "skins/skin-red.less";
